--- a/galleryapp/index.html
+++ b/galleryapp/index.html
@@ -5,7 +5,7 @@
     <title>GalleryApp By Chaiwat</title>
     <style>
     .avatar {
-        
+        text-align: center;
         vertical-align: middle;
         width: 100px;
         height: 100px;
